--- a/GreatKart/.env
+++ b/GreatKart/.env
@@ -7,3 +7,7 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 TIME_ZONE=Asia/Ho_Chi_Minh
 LANGUAGE_CODE=vi
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=abc@gmail.com
+EMAIL_HOST_PASSWORD=...
+EMAIL_PORT=587
